@@ -1,0 +1,38 @@
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+
+language: c
+sudo: required
+dist: focal
+
+jobs:
+  include:
+    - name: linux
+      os: linux
+    - name: macOS
+      os: osx
+
+env:
+  global:
+    - USE_BSPM="true"
+    - _R_CHECK_FORCE_SUGGESTS_="false"
+
+before_install:
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
+
+install:
+  - ./run.sh install_all
+
+script:
+  - ./run.sh run_tests
+
+after_failure:
+  - ./run.sh dump_logs
+
+#after_success:
+#  - ./run.sh coverage
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
